@@ -223,6 +223,7 @@ hardware/S0MeterSerial.cpp
 hardware/SBFSpot.cpp
 hardware/SolarEdgeBase.cpp
 hardware/SolarEdgeTCP.cpp
+hardware/SolarMaxTCP.cpp
 hardware/TCPProxy/tcpproxy_server.cpp
 hardware/TE923.cpp
 hardware/TE923Tool.cpp
