@@ -185,6 +185,7 @@ const char *Hardware_Type_Desc(int hType)
 		{ HTYPE_RFLINK, "RFLink Gateway USB" },
 		{ HTYPE_KMTronicUSB, "KMTronic Gateway USB" },
 		{ HTYPE_KMTronicTCP, "KMTronic Gateway with LAN interface" },
+		{ HTYPE_SOLARMAXTCP, "SolarMax via LAN interface" },
 		{ 0, NULL, NULL }
 	};
 	return findTableIDSingle1 (Table, hType);
