@@ -97,6 +97,7 @@ Version 2.0.xxxx (xxxx 2015)
 - Implemented: Uservariables, display Idx value (thanks to ikkemaniac)
 - Implemented: Incremental Counter sensor (thanks to ikkemaniac)
 - Implemented: Kodi notification system (thanks to dnpwwo)
+- Implemented: SolarMax inverter with Lan interface
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
